--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+.row{
+    max-width: 1240px;
+    width: 100%;
+    margin: 0 auto;
+}
+
 header{
     min-height: 30vh;
     display: flex;
@@ -19,8 +25,19 @@ header h1{
 .box-filter{
     height: 80px;
     background-color: #e5e5e5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.box-filter input{
+    border: none;
+    border-bottom: 2px solid black;
+    padding: 5px 15px;
+    outline: none;
+    max-width: 250px;
+    width: 100%;
+}
 .container-card{
     display: flex;
     justify-content: center;
@@ -33,12 +50,9 @@ header h1{
     width: 350px;
     height: 500px;
     overflow: hidden;
-
-    box-shadow: 0 0 10px black;
+    box-shadow: 0 0 10px rgb(204, 204, 204);
     margin: 10px;
     border-radius: 5px;
-
-
 }
 
 .card-img{
@@ -57,23 +71,35 @@ header h1{
 }
 
 .name{
-
-}
-
-.category{
-
-}
-
-.mark{
-
+    margin-bottom: 20px;
 }
 
 .quantity{
-
+    margin-top: 20px;
+    display: inline-block;
 }
 
+.price{
+    margin-top: 10px;
+    display: inline-block;
+    margin-left: 100px;
+    border-radius: 30px;
+    padding: 5px 10px;
+    background-color: greenyellow;
+    font-weight: 900;
+}
+
+.details{
+    margin-top: 50px;
+
+}
+.details p{
+    display: inline-block;
+}
 
 .hiden-product{
     display: none;
 }
+
+
 
